refactor: metadata search